[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "arcpy_merge"
version = "0.1.0"
description = "A simple CLI for interacting with mosaic to new raster geoprocessing tool."
authors = [{ name = "Ryan Hamilton", email = "ryan.hamilton@ec.gc.ca" }]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["geoprocessing", "pyproject", 'esri', 'arcgis pro']
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
arcpy_merge = 'arcpy_merge:main'
